# orangenote-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  GETTING_STARTED.md  GIT_COMMIT_GUIDE.md  INDEX.md  LICENSE  PROGRESS.md  README.md  ROADMAP.md  STEP_A2.md  STEP_A3.md  STEP_A3_CHECKLIST.md  STEP_A3_COMPLETION_REPORT.md  STEP_A3_FILES.txt  STEP_A3_SUMMARY.md  STEP_A4.md  STEP_A4_COMMIT_GUIDE.md  STEP_A5.md  STEP_A5_COMMIT_GUIDE.md  STEP_A5_FINAL_REPORT.md  STEP_A5_QUICK_REFERENCE.md  STEP_A5_SUMMARY.md  SUMMARY.md  WHISPER_BUILD_INSTRUCTIONS.md  WHISPER_SETUP_GUIDE.md  build.rs  setup-whisper.sh
.github/workflows/: release.yml
docs/: CROSS_COMPILATION_MACOS.md  DOC_INDEX.md
scripts/: create-release.sh
src/: lib.rs
src/infrastructure/: mod.rs
src/infrastructure/audio/: mod.rs  processor.rs
src/infrastructure/transcription/: mod.rs
src/infrastructure/transcription/whisper/: context.rs  ffi.rs  merger.rs  mod.rs  model_manager.rs  transcriber.rs
