[package]
name = "orangenote-cli"
version = "0.2.0"
edition = "2021"
authors = ["OrangeNote Team"]
description = "CLI tool for audio transcription using whisper.cpp"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4"
env_logger = "0.11"

# Audio metadata extraction
metaflac = "0.2"
mp3-metadata = "0.3"
hound = "3.5"

# Media info via command line as fallback
which = "5.0"

# Audio decoding and resampling
symphonia = { version = "0.5", features = ["default"] }

# Whisper transcription (optional)
# Using custom FFI bindings instead of whisper-rs crate
reqwest = { version = "0.11", features = ["stream"], optional = true }
indicatif = { version = "0.17", optional = true }
futures = { version = "0.3", optional = true }
sha2 = "0.10"
hex = "0.4"

[features]
default = []
whisper = ["reqwest", "indicatif", "futures"]

[lib]
name = "orangenote_cli"
path = "src/lib.rs"

[[bin]]
name = "orangenote-cli"
path = "src/bin/orangenote-cli.rs"

[profile.release]
opt-level = 3
lto = true
